--- a/Assignment2_Matt_Tucker/RioStyle.css
+++ b/Assignment2_Matt_Tucker/RioStyle.css
@@ -79,6 +79,18 @@ li a:hover:not(.active) {
 	width: 75%;
 	float:right;
     padding-top: 199px;
+}
 
+.btnSpace
+{
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+}
+
+table, tr, th, td
+{
+    border: solid black 1px;
+    border-collapse: collapse;
 }
 
