--- a/Assignment2_Matt_Tucker/RioStyle.css
+++ b/Assignment2_Matt_Tucker/RioStyle.css
@@ -2,24 +2,31 @@ body
 {
 	margin: 0px;
 	padding: 0px;
+    background-image: url("images/background2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: Verdana;
 }
 
 header
 {
 	/*background-color: black;*/
-    background-image: url("images/rioBanner.jpg");
+    background-image: url("images/banner.png");
 	width: 100%;
 	height: 200px;	
     top:0px;
     left: 0px;
     position:fixed;
+
 }
 
 h1
 {
 	color: white;
 	margin: 0;
-	padding: 0;
+	padding-top: 40px;
+    padding-left: 40px;
+
 }
 h2
 {
@@ -79,10 +86,11 @@ li a:hover:not(.active) {
 .mainContent
 {
 	padding:1px 16px;
-	height:900px;
-	width: 75%;
+	height:100%;
+	width: 83%;
 	float:right;
     padding-top: 199px;
+
 }
 
 .btnSpace
@@ -96,5 +104,26 @@ table, tr, th, td
 {
     border: solid black 1px;
     border-collapse: collapse;
+}
+
+button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+}
+
+button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+#homeHeading
+{
+    color: #0071BB;
 }
 
