--- a/Assignment3_Matt_Tucker/StyleSheet.css
+++ b/Assignment3_Matt_Tucker/StyleSheet.css
@@ -70,6 +70,13 @@ input {
 	margin-left: 160px;
 }
 
+#registationSuccessful
+{
+	font-size: 16px;
+	color: red;
+	padding-left: 80px;
+}
+
 .welcomeInfo
 {
 	text-align: center;
