--- a/Assignment3_Matt_Tucker/StyleSheet.css
+++ b/Assignment3_Matt_Tucker/StyleSheet.css
@@ -188,3 +188,10 @@ li a:hover:not(.active) {
     padding-top: 199px;
 
 }
+
+#addActivity
+{
+	font-size: 20px;
+	color: red;
+	text-decoration: underline;
+}
