--- a/Assignment3_Matt_Tucker/StyleSheet.css
+++ b/Assignment3_Matt_Tucker/StyleSheet.css
@@ -76,6 +76,16 @@ input {
 	clear: all;
 }
 
+#helloBtn
+{
+	float: right;
+	padding-top: 8px;
+	padding-right: 50px;
+	font-size: 20px;
+	font-weight: bold; 
+	clear: all;
+}
+
 #registationSuccessful
 {
 	font-size: 16px;
@@ -109,6 +119,11 @@ input {
 	clear: both;
 }
 
+table.rawDataDisplay, tr, th, td
+{
+    border: solid black 1px;
+    border-collapse: collapse;
+}
 
 header
 {
