--- a/Assignment3_Matt_Tucker/StyleSheet.css
+++ b/Assignment3_Matt_Tucker/StyleSheet.css
@@ -134,6 +134,7 @@ header
     top:0px;
     left: 0px;
     position:fixed;
+    z-index: 10;
 }
 
 h1
@@ -203,12 +204,14 @@ li a:hover:not(.active) {
 .mainContent
 {
 	padding:1px 16px;
-	height:100%;
+	height:900px;
 	width: 83%;
 	float:right;
     padding-top: 199px;
-
+    overflow-y:scroll;
+    z-index: 5;
 }
+
 
 #addActivity
 {
