--- a/Assignment3_Matt_Tucker/StyleSheet.css
+++ b/Assignment3_Matt_Tucker/StyleSheet.css
@@ -74,15 +74,20 @@ input {
 {
 	float: right;
 	clear: all;
+	margin-top: 12px;
+	margin-right: 20px;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 #helloBtn
 {
 	float: right;
-	padding-top: 8px;
+	padding-top: 15px;
 	padding-right: 50px;
 	font-size: 20px;
 	font-weight: bold; 
+	color: white;
 	clear: all;
 }
 
@@ -127,21 +132,26 @@ table.rawDataDisplay, tr, th, td
 
 header
 {
-	background-color: #4CAF50;
-    /*background-image: url("images/banner.png");*/
+	/*background-color: #4CAF50;*/
+    background-image: url("images/exercise1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 	width: 100%;
 	height: 200px;	
     top:0px;
     left: 0px;
     position:fixed;
-    z-index: 10;
+    z-index: 15;
 }
 
 h1
 {
-	color: Black;
+	color: white;
+	display: inline;
+	float: left;
+	width:20%;
 	margin: 0;
-	padding-top: 40px;
+	padding-top: 10px;
     padding-left: 40px;
 
 }
@@ -169,7 +179,7 @@ ul {
     border: 1px solid #555;
     height: 100%;
     overflow: auto;
-    top: 199px;
+    top: 249px;
 }
 
 li a {
@@ -207,11 +217,20 @@ li a:hover:not(.active) {
 	height:900px;
 	width: 83%;
 	float:right;
-    padding-top: 199px;
+    padding-top: 249px;
     overflow-y:scroll;
     z-index: 5;
 }
 
+.subBanner
+{
+	padding-top: 199px;
+	height: 50px;
+	background-color: black;
+	width: 100%;
+	position:fixed;
+	z-index: 10;
+}
 
 #addActivity
 {
