Finished Yay Go Me

--- a/Assignment3_Matt_Tucker/StyleSheet.css
+++ b/Assignment3_Matt_Tucker/StyleSheet.css
@@ -1,3 +1,9 @@
+/* 
+	Matt Tucker
+	Date: 16th November
+	Assignment 3
+*/
+
 *
 {
 	margin: 0px;
@@ -159,7 +165,6 @@ h1
 	margin: 0;
 	padding-top: 10px;
     padding-left: 40px;
-
 }
 
 #calendar 
